--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   shared_preferences: ^2.5.2
   lottie: ^3.3.1
   flutter_localization: ^0.3.1
+  connectivity_plus: ^6.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
